# kotemari

./: .gitignore  README.md  README_ja.md  hello.py  plan.md  pyproject.toml  todo.md
.kotemari_cache/: analysis_cache.pkl
docs/: architecture.md  function_spec.md  idea.md  requirements.md
examples/: list_dummy_project_files.py
src/kotemari/: __init__.py  core.py
src/kotemari/controller/: cli_controller.py
src/kotemari/domain/: __init__.py  cache_metadata.py  context_data.py  dependency_info.py  exceptions.py  file_content_formatter.py  file_info.py  file_system_event.py  parsed_python_info.py  project_config.py
src/kotemari/gateway/: cache_storage.py  cli_parser.py  file_system_accessor.py  gitignore_reader.py
src/kotemari/service/: __init__.py  ast_parser.py  file_system_event_monitor.py  hash_calculator.py  ignore_rule_processor.py  language_detector.py  python_parser.py
src/kotemari/usecase/: __init__.py  cache_updater.py  config_manager.py  context_builder.py  project_analyzer.py
tests/: _test_cli.py  test_core.py  test_core_watching.py
tests/domain/: test_file_content_formatter.py  test_parsed_python_info.py
tests/dummy_python_proj/: .gitignore  README.md  data.txt  main.py  requirements.txt
tests/dummy_python_proj/my_module/: utils.py
tests/dummy_python_proj/my_module/sub_module/: helper.py
tests/dummy_python_proj/tests/: test_utils.py
tests/gateway/: test_cache_storage.py  test_file_system_accessor.py  test_gitignore_reader.py
tests/integration/: __init__.py  test_cli_integration.py
tests/service/: test_ast_parser.py  test_file_system_event_monitor.py  test_hash_calculator.py  test_ignore_rule_processor.py  test_language_detector.py  test_python_parser.py
tests/usecase/: test_cache_updater.py  test_cache_updater_event.py  test_config_manager.py  test_context_builder.py  test_project_analyzer.py
tests/utility/: test_path_resolver.py
