[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kotemari"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" }, # TODO: 作者情報を更新してください
]
description = "A library to analyze project structure and generate context for LLMs." # TODO: 説明をより詳細に記述してください
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO: ライセンスを決定してください
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    # ここに実行時依存ライブラリを追加します
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "watchdog>=3.0.0",
    "typer[all]>=0.15.2", # Use [all] to include rich dependency
    "rich>=14.0.0",
]
keywords = ["python", "project analysis", "dependency", "context generation", "llm"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "uv>=0.1.0", # uv 自体も開発依存に追加しておくと便利です
]

[project.urls]
"Homepage" = "https://github.com/yourusername/kotemari" # Replace with actual URL
"Bug Tracker" = "https://github.com/your-username/kotemari/issues" # TODO: IssueトラッカーのURLを更新してください
Repository = "https://github.com/yourusername/kotemari" # Replace with actual URL

[project.scripts]
# English: Define the entry point for the CLI application.
# 日本語: CLIアプリケーションのエントリポイントを定義します。
kotemari = "kotemari.gateway.cli_parser:main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "tests/integration", # Add integration test path
]
python_files = ["test_*.py"]
pythonpath = ["src"]
norecursedirs = ["tests/dummy_python_proj", ".venv", ".git", "dist", "build"]
addopts = [
    "--import-mode=importlib",
    "--cov=src/kotemari", # カバレッジ計測対象を src/kotemari に設定
    "--cov-report=term-missing",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kotemari"]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
]
